# MPU6050-MotionTracking

Collect data/: CMakeLists.txt  I2Cdev.cpp  IMU_zero.cpp  MPU9250.h  README.md  collect_data.cpp
